fixed compile issue

--- a/app/views/BoxNumberView.scala.html
+++ b/app/views/BoxNumberView.scala.html
@@ -37,7 +37,7 @@
             @inputRadio(
                 form = form,
                 legend = messages("boxNumber.heading"),
-                items = radioItems,
+                items = boxNumbers,
                 legendAsHeading = true
             )
 
