--- a/app/views/UnderpaymentReasonSummaryView.scala.html
+++ b/app/views/UnderpaymentReasonSummaryView.scala.html
@@ -23,7 +23,7 @@
         govukSummaryList: GovukSummaryList
 )
 
-@(form: Form[_], backLink: Call, summaryList: Option[SummaryList])(implicit request: Request[_], messages: Messages)
+@(form: Form[_], summaryList: Option[SummaryList])(implicit request: Request[_], messages: Messages)
 
 @titleAndHeader = {
 @summaryList.map { sl =>
@@ -38,7 +38,7 @@
 @layout(
     form = Some(form),
     pageTitle = titleAndHeader,
-    customBackLinkUrl = Some(backLink)
+    showBackLink = false
 ) {
 
     @errorSummary(form.errors)
