CIVDT-625: Change and Remove Underpayment Details (#131)
* updated change routes and controller

* added change Confirm controller and view

* WIP

* adding functionality for the change

* added in remove functionality

* fixed url typo and removed backlink from summary page

* fixed another url typo

* updated unit tests

* updated unit test for coverage

* Remove view spec done, Change view spec - WIP

* removed unused imports

* created view spec for change underpayment details page

* Added controller spec for change underpayment details

Co-authored-by: tvaidotas <1133367+tvaidotas@users.noreply.github.com>
Co-authored-by: dannybassi <72074461+dannybassi@users.noreply.github.com>

--- a/app/views/underpayments/UnderpaymentDetailSummaryView.scala.html
+++ b/app/views/underpayments/UnderpaymentDetailSummaryView.scala.html
@@ -35,7 +35,8 @@
 @layout(
     pageTitle = messages("underpaymentDetailsSummary.pageTitle"),
     form = Some(form),
-    customBackLinkUrl = None) {
+    customBackLinkUrl = None,
+    showBackLink = false) {
 
     @errorSummary(form.errors)
 
