CIVDT-701: Added new 'Any other supporting docs' page (#137)
Added new 'Any other supporting docs' page

--- a/app/views/SupportingDocView.scala.html
+++ b/app/views/SupportingDocView.scala.html
@@ -34,7 +34,7 @@
 
     @bullets(Seq(messages("SupportDoc.bullet1"),messages("SupportDoc.bullet2"),messages("SupportDoc.bullet3")).map(Html(_)))
 
-    @linkButton(url = controllers.routes.UploadFileController.onLoad().url,messages(("common.button.continue")))
+    @linkButton(url = controllers.routes.AnyOtherSupportingDocsController.onLoad().url,messages(("common.button.continue")))
 }
 
 
