update ID's for the checkboxes to be more understandable

--- a/app/views/OptionalSupportingDocsView.scala.html
+++ b/app/views/OptionalSupportingDocsView.scala.html
@@ -51,28 +51,28 @@
                 items = Seq(
                     CheckboxItem(
                         name = Some("optionalDocumentsList[]"),
-                        id = Some("optionalDocumentsList"),
+                        id = Some("importAndEntry"),
                         value = "importAndEntry",
                         content = Text(messages("optionalSupportingDocuments.importAndEntry")),
                         checked = checked.contains("importAndEntry")
                     ),
                     CheckboxItem(
                         name = Some("optionalDocumentsList[]"),
-                        id = Some("optionalDocumentsList-1"),
+                        id = Some("airwayBill"),
                         value = "airwayBill",
                         content = Text(messages("optionalSupportingDocuments.airwayBill")),
                         checked = checked.contains("airwayBill")
                     ),
                     CheckboxItem(
                         name = Some("optionalDocumentsList[]"),
-                        id = Some("optionalDocumentsList-2"),
+                        id = Some("originProof"),
                         value = "originProof",
                         content = Text(messages("optionalSupportingDocuments.originProof")),
                         checked = checked.contains("originProof")
                     ),
                     CheckboxItem(
                         name = Some("optionalDocumentsList[]"),
-                        id = Some("optionalDocumentsList-3"),
+                        id = Some("other"),
                         value = "other",
                         content = Text(messages("optionalSupportingDocuments.other")),
                         checked = checked.contains("other")
